# gpui_demo

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cursor/rules/: consolidated-rules.mdc
examples/: animated_button.rs  with_button.rs
src/: lib.rs  logging.rs  main.rs  preferences.rs
src/components/: dialogs.rs  file_form.rs  mod.rs  registration.rs  window.rs
src/models/: file_form_model.rs  mod.rs
src/platform/: linux_theme.rs  macos_theme.rs  mod.rs
src/preferences/: mod.rs
