[package]
name = "gpui_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2"
native-dialog = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_System_Registry", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.10"
