[package]
name = "gpui_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2"
native-dialog = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString"] }
objc2-app-kit = { version = "0.2", features = ["NSAppearance", "NSColor", "NSColorSpace", "all"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_System_Registry", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.10"
